# CAndCppInVSCodeTemplate

./: .gdbinit  .gitignore  CMakeLists.txt  CMakeLists_example.txt  Freeverb.cmake  aes-gcrypt.c  decrypt.c  directx_test.cpp  keys.c  new.cpp  open_binary_file_test.c  opengl-hello-world.cpp  opengl-transparency-demo.cpp  opengl-triangle.cpp  vst3test.cpp  wcxhead.h  wcxtest.c  windows_app_unicode.cpp  windows_dll_test.cpp
freeverb-vst2.4/: Freeverb.hpp  FreeverbMain.cpp
include/VST2_SDK/vstgui.sf/drawtest/: CMakeLists.txt
include/VST2_SDK/vstgui.sf/vstgui/: vstgui.cpp
include/VST3_SDK/aspik.projects/DemoSynthPlugin/: CMakeLists.txt
include/VST3_SDK/aspik.projects/DemoSynthPlugin/project_source/cmake/au_cmake/: CMakeLists.txt
include/VST3_SDK/aspik.projects/DemoVolumePlugin/: CMakeLists.txt
include/VST3_SDK/aspik.projects/DemoVolumePlugin/cmake/vst_cmake/: CMakeLists.txt
include/VST3_SDK/aspik.projects/PluginTemplate/: CMakeLists.txt
include/VST3_SDK/aspik.projects/PluginTemplate/cmake/vst_cmake/: CMakeLists.txt
include/VST3_SDK/aspik.projects/PluginTemplate/project_source/resources/: PluginGUI.uidesc
include/VST3_SDK/base/: CMakeLists.txt
include/VST3_SDK/base/source/: fdebug.cpp  fstring.cpp
include/VST3_SDK/cmake/: README.md
include/VST3_SDK/cmake/modules/: AddSMTGLibrary.cmake  AddVST3Options.cmake  ExportedSymbols.cmake  Global.cmake  PlatformToolset.cmake  VstGuiSupport.cmake
include/VST3_SDK/pluginterfaces/: README.md
include/VST3_SDK/pluginterfaces/base/: fplatform.h  ftypes.h  funknown.cpp  ustring.cpp
include/VST3_SDK/public.sdk/samples/vst-hosting/editorhost/: CMakeLists.txt
include/VST3_SDK/public.sdk/samples/vst/again/: CMakeLists.txt
include/VST3_SDK/public.sdk/samples/vst/again_aax/: CMakeLists.txt
include/VST3_SDK/public.sdk/samples/vst/hostchecker/: CMakeLists.txt
include/VST3_SDK/public.sdk/samples/vst/mda-vst3/: CMakeLists.txt
include/VST3_SDK/public.sdk/samples/vst/note_expression_synth/: CMakeLists.txt
include/VST3_SDK/public.sdk/samples/vst/note_expression_text/: CMakeLists.txt
include/VST3_SDK/public.sdk/samples/vst/pitchnames/: CMakeLists.txt
include/VST3_SDK/public.sdk/source/main/: pluginfactory.h
include/VST3_SDK/public.sdk/source/vst/aaxwrapper/: CMakeLists.txt
include/VST3_SDK/public.sdk/source/vst/hosting/: module_win32.cpp
include/VST3_SDK/vstgui4/vstgui/: CMakeLists.txt
include/VST3_SDK/vstgui4/vstgui/lib/: CMakeLists.txt
include/VST3_SDK/vstgui4/vstgui/standalone/: CMakeLists.txt
include/VST3_SDK/vstgui4/vstgui/standalone/examples/: CMakeLists.txt
include/VST3_SDK/vstgui4/vstgui/standalone/examples/mandelbrot/: CMakeLists.txt
include/VST3_SDK/vstgui4/vstgui/standalone/examples/minesweeper/: CMakeLists.txt
include/VST3_SDK/vstgui4/vstgui/standalone/examples/minesweeper/source/: highscorelist.h  highscores.h  model.cpp
include/VST3_SDK/vstgui4/vstgui/standalone/examples/simple_standalone/: CMakeLists.txt
include/VST3_SDK/vstgui4/vstgui/standalone/examples/standalone/: CMakeLists.txt
include/VST3_SDK/vstgui4/vstgui/standalone/source/: uidescriptionwindowcontroller.cpp
include/VST3_SDK/vstgui4/vstgui/tests/base64codecspeed/: CMakeLists.txt
include/VST3_SDK/vstgui4/vstgui/tests/gfxtest/: CMakeLists.txt
include/VST3_SDK/vstgui4/vstgui/tests/uidescriptioneditorapp/: CMakeLists.txt
include/VST3_SDK/vstgui4/vstgui/tests/unittest/: CMakeLists.txt  unittests.cpp
include/VST3_SDK/vstgui4/vstgui/tools/imagestitcher/: CMakeLists.txt
include/VST3_SDK/vstgui4/vstgui/tools/uidesccompressor/: CMakeLists.txt
include/base/: CMakeLists.txt  README.md
include/base/source/: fstring.cpp
include/cmake/modules/: AddSMTGLibrary.cmake  AddVST3Options.cmake  Global.cmake  PlatformToolset.cmake  VstGuiSupport.cmake
include/freeverb.components/: allpass.cpp  allpass.hpp  comb.cpp  comb.hpp  revmodel.cpp  revmodel.hpp  tuning.h
include/pluginterfaces/base/: fplatform.h  fstrdefs.h  ftypes.h  funknown.cpp  futils.h  ustring.cpp
include/public.sdk/: README.md
include/public.sdk/samples/vst/: CMakeLists.txt
include/public.sdk/samples/vst-hosting/audiohost/: CMakeLists.txt
include/public.sdk/samples/vst/adelay/: CMakeLists.txt
include/public.sdk/samples/vst/again/: CMakeLists.txt
include/public.sdk/samples/vst/hostchecker/: CMakeLists.txt
include/public.sdk/source/main/: pluginfactory.h
include/public.sdk/source/vst/hosting/: module_win32.cpp
include/vst.2.4.sdk/: audioeffectx.cpp  vstplugmain.cpp
include/vstgui4/vstgui/lib/: CMakeLists.txt  algorithm.h  vstguibase.h
include/vstgui4/vstgui/lib/platform/win32/: win32dragging.cpp  win32frame.cpp  win32openglview.cpp  win32support.cpp
include/vstgui4/vstgui/standalone/: CMakeLists.txt
include/vstgui4/vstgui/standalone/cmake/modules/: vstgui_add_executable.cmake
include/vstgui4/vstgui/standalone/examples/mandelbrot/: CMakeLists.txt
include/vstgui4/vstgui/standalone/source/: uidescriptionwindowcontroller.cpp
include/vstgui4/vstgui/tests/gfxtest/: CMakeLists.txt
include/vstgui4/vstgui/tests/unittest/: CMakeLists.txt  unittests.cpp
include/vstgui4/vstgui/tools/: CMakeLists.txt
include/vstgui4/vstgui/tools/imagestitcher/: CMakeLists.txt
include/vstgui4/vstgui/tools/imagestitcher/source/: documentcontroller.cpp  imageframesview.cpp  startupcontroller.cpp
include/vstgui4/vstgui/tools/uidesccompressor/: CMakeLists.txt
include/vstgui4/vstgui/uidescription/: CMakeLists.txt
vst2.x-plugins/Revitar/: CMakeLists.txt
vst2.x-plugins/adelay/: CMakeLists.txt  surrounddelay.cpp  surrounddelay.h
vst2.x-plugins/adelay/editor/: sdeditor.cpp  sdeditor.h
vst2.x-plugins/again/: CMakeLists.txt
vst2.x-plugins/freeverb-vst2.4/: CMakeLists.txt  Freeverb.cpp  Freeverb.hpp
vst2.x-plugins/minihost/: CMakeLists.txt
vst2.x-plugins/minihost/source/: minieditor.cpp  minihost.cpp
vst2.x-plugins/minimal_vst2x_host/: CMakeLists.txt  minimal_vst2x_host.cpp
vst2.x-plugins/vstxsynth/: CMakeLists.txt
vst3-plugins/helloworld/: CMakeLists.txt
vst3-plugins/helloworld_with_VSTGUI/: CMakeLists.txt
(+35 files in other folders)
